only hard coded in working

--- a/convolve/convolve/convolve.vcxproj
+++ b/convolve/convolve/convolve.vcxproj
@@ -64,7 +64,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ascii_file_float.cpp" />
     <ClCompile Include="convolve.cpp" />
+    <ClCompile Include="Kernelutil.cpp" />
     <ClCompile Include="Iputil.cpp" />
   </ItemGroup>
   <ItemGroup>
